fix alignment

--- a/web/src/repo/commits/GitCommitNode.scss
+++ b/web/src/repo/commits/GitCommitNode.scss
@@ -36,10 +36,12 @@
             flex: none;
             font-size: 9px;
             padding: 0 0.175rem;
+            margin-right: 0.5rem;
         }
         &-timestamp {
             flex: none;
             white-space: nowrap;
+            margin-bottom: -0.125rem;
         }
         &-body {
             margin-top: 0.25rem;
